# sync-music-player

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-release.yml
include/: common.hpp  net.hpp  protocol.hpp  session_controller.hpp
include/ui/: main_window.hpp
music/: README.md
resources/: assets.qrc
src/: main.cpp  session_controller.cpp
src/ui/: main_window.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
